kube/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: java-grpc-destination-rule
spec:
  host: java-grpc-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: java-grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-grpc-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - java-grpc-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: java-grpc-service
        port:
          number: 9000
        subset: v1
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - PUT
      - DELETE
      allowHeaders:
      - grpc-timeout
      - content-type
      - keep-alive
      - user-agent
      - cache-control
      - content-type
      - content-transfer-encoding
      - custom-header-1
      - x-accept-content-transfer-encoding
      - x-accept-response-streaming
      - x-user-agent
#      - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
      - custom-header-1
      - grpc-status
      - grpc-message
      allowCredentials: true
